deployments/jenkins_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: kube-system
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: kube-system
  labels:
    app: jenkins
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      nodePort: 30333
  selector:
    app: jenkins
