deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: kube-system
# annotations:
#    kubernetes.io/ingress.class: nginx
#    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: nginx-service
 #           port:
 #             number: 80

      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
